--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,10 +1,13 @@
+%flexItemsCenter {
+  display: flex;
+  align-items: center;
+}
 .header {
   background: #eee;
 }
 
 .top-bar {
-  display: flex;
-  align-items: center;
+  @extend %flexItemsCenter;
   padding: 30px 0;
 }
 
@@ -13,8 +16,7 @@
   margin-right: auto;
 
   &__list {
-    display: flex;
-    align-items: center;
+    @extend %flexItemsCenter;
     gap: 30px;
   }
 
@@ -32,13 +34,11 @@
 }
 
 .top-act {
-  display: flex;
-  align-items: center;
+  @extend %flexItemsCenter;
   gap: 20px;
 
   &__group {
-    display: flex;
-    align-items: center;
+    @extend %flexItemsCenter;
     min-width: 50px;
     height: 50px;
 
@@ -52,10 +52,10 @@
   }
 
   &__btn {
-    display: flex;
-    align-items: center;
+    @extend %flexItemsCenter;
     gap: 10px;
     padding: 13px 20px;
+    cursor: pointer;
   }
 
   &__title {
@@ -76,5 +76,6 @@
     height: 50px;
     object-fit: cover;
     border-radius: 8px;
+    cursor: pointer;
   }
 }
