--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -17,6 +17,7 @@
   }
 
   @include abstracts.breakpoint(sm) {
+    justify-content: space-between;
     padding: 16px 0;
   }
 
@@ -62,6 +63,10 @@
   @extend %flexItemsCenter;
   gap: 20px;
   margin-left: auto;
+
+  @include abstracts.breakpoint(sm) {
+    margin-left: 0;
+  }
 
   &__group {
     @extend %flexItemsCenter;
