B61.12 - Dựng khung phần Mega menu

--- a/templates/header.html
+++ b/templates/header.html
@@ -16,8 +16,8 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-      <ul class="navbar__list">
-        <li>
+      <ul class="navbar__list js-dropdown-list">
+        <li class="navbar__item">
           <a href="#!" class="navbar__link">
             Departments
             <img
@@ -26,8 +26,17 @@
               class="navbar__arrow icon"
             />
           </a>
+          <div class="dropdown">
+            <div class="dropdown__inner">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perspiciatis laboriosam fugiat consequuntur sapiente, minima
+              ducimus nesciunt excepturi. Vel perferendis ipsa sint. Libero
+              numquam culpa laborum incidunt perferendis eius maiores
+              necessitatibus!
+            </div>
+          </div>
         </li>
-        <li>
+        <li class="navbar__item">
           <a href="#!" class="navbar__link">
             Grocery
             <img
@@ -36,8 +45,17 @@
               class="navbar__arrow icon"
             />
           </a>
+          <div class="dropdown">
+            <div class="dropdown__inner">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perspiciatis laboriosam fugiat consequuntur sapiente, minima
+              ducimus nesciunt excepturi. Vel perferendis ipsa sint. Libero
+              numquam culpa laborum incidunt perferendis eius maiores
+              necessitatibus!
+            </div>
+          </div>
         </li>
-        <li>
+        <li class="navbar__item">
           <a href="#!" class="navbar__link">
             Beauty
             <img
@@ -46,6 +64,15 @@
               class="navbar__arrow icon"
             />
           </a>
+          <div class="dropdown">
+            <div class="dropdown__inner">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Perspiciatis laboriosam fugiat consequuntur sapiente, minima
+              ducimus nesciunt excepturi. Vel perferendis ipsa sint. Libero
+              numquam culpa laborum incidunt perferendis eius maiores
+              necessitatibus!
+            </div>
+          </div>
         </li>
       </ul>
     </nav>
