B61.13 - Làm nội dung phần Mega menu #1

--- a/templates/header.html
+++ b/templates/header.html
@@ -28,11 +28,43 @@
           </a>
           <div class="dropdown">
             <div class="dropdown__inner">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perspiciatis laboriosam fugiat consequuntur sapiente, minima
-              ducimus nesciunt excepturi. Vel perferendis ipsa sint. Libero
-              numquam culpa laborum incidunt perferendis eius maiores
-              necessitatibus!
+              <div class="top-menu">
+                <div class="top-menu__main">
+                  <!-- Menu column -->
+                  <div class="menu-column">
+                    <div class="menu-column__icon">
+                      <img
+                        src="./assets/img/category/cate-1.1.svg"
+                        alt=""
+                        class="menu-column__icon-1"
+                      />
+                      <img
+                        src="./assets/img/category/cate-1.2.svg"
+                        alt=""
+                        class="menu-column__icon-2"
+                      />
+                    </div>
+                    <div class="menu-column__content">
+                      <h2 class="menu-column__heading">All Departments</h2>
+                      <ul class="menu-column__list">
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Savings & Featured Shops
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">Electronics</a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </li>
@@ -45,15 +77,6 @@
               class="navbar__arrow icon"
             />
           </a>
-          <div class="dropdown">
-            <div class="dropdown__inner">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perspiciatis laboriosam fugiat consequuntur sapiente, minima
-              ducimus nesciunt excepturi. Vel perferendis ipsa sint. Libero
-              numquam culpa laborum incidunt perferendis eius maiores
-              necessitatibus!
-            </div>
-          </div>
         </li>
         <li class="navbar__item">
           <a href="#!" class="navbar__link">
@@ -64,15 +87,6 @@
               class="navbar__arrow icon"
             />
           </a>
-          <div class="dropdown">
-            <div class="dropdown__inner">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Perspiciatis laboriosam fugiat consequuntur sapiente, minima
-              ducimus nesciunt excepturi. Vel perferendis ipsa sint. Libero
-              numquam culpa laborum incidunt perferendis eius maiores
-              necessitatibus!
-            </div>
-          </div>
         </li>
       </ul>
     </nav>
