--- a/templates/header.html
+++ b/templates/header.html
@@ -60,6 +60,61 @@
                             Clothing, Shoes & Accessories
                           </a>
                         </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
+                        <li>
+                          <a href="#!" class="menu-column__link">
+                            Clothing, Shoes & Accessories
+                          </a>
+                        </li>
                       </ul>
                     </div>
                   </div>
