--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -7,12 +7,10 @@
   padding-top: 54px;
 
   &__inner {
-    --inner-max-height: min(582px, 100vh - 158px);
     --inner-padding: 30px;
 
     position: relative;
 
-    max-height: var(--inner-max-height);
     padding: var(--inner-padding);
 
     border-radius: 20px;
@@ -31,18 +29,18 @@
 }
 
 .top-menu {
-  // height: 100%; để % sẽ không xuất hiện thanh cuộn
-  // max-height: inherit; kế thừa __inner thì menu vẫn bị chòi ra,
-  //do menu__main có padding xuống dưới nên bị lệch
-  //(có thể margin ngược lại hoặc tính toán để trừ đi khoảng padding đó)
-  max-height: calc(
-    var(--inner-max-height) - var(--inner-padding) * 2
-  ); // để nội dung không chòi ra ngoài
+  --main-column-width: 292px;
+
+  position: relative;
 
   &__main {
-    width: 292px;
-    // height: 100%; để % sẽ không xuất hiện thanh cuộn
-    max-height: inherit; //kế thừa cấp cha
+    width: var(--main-column-width);
+    // height: 100%; để % sẽ không xuất hiện thanh cuộn, ta phải giới hạn kích thước
+    //do __inner có padding trên dưới nên __inner bị lệch xuống
+    //(có thể margin ngược lại hoặc tính toán để trừ đi khoảng padding đó)
+    height: calc(
+      min(582px, 100vh - 158px) - var(--inner-padding) * 2
+    ); // để nội dung không chòi ra ngoài
     border-right: 1px solid var(--top-menu-border-color);
     overflow-y: auto;
   }
@@ -51,6 +49,10 @@
 .menu-column {
   display: flex;
   gap: 14px;
+
+  + .menu-column {
+    margin-top: var(--inner-padding);
+  }
 
   &__icon {
     position: relative;
@@ -90,15 +92,35 @@
     margin-top: 19px;
   }
 
+  &__item {
+    &:hover .sub-menu {
+      display: grid;
+    }
+  }
+
+  &__item:hover > &__link {
+    font-weight: 500;
+    color: #0071dc;
+  }
+
   &__link {
     display: block;
     padding: 7px 0;
     font-size: 1.4rem;
     line-height: 142.857%;
-
-    &:hover {
-      font-weight: 500;
-      color: #0071dc;
-    }
   }
+}
+
+.sub-menu {
+  position: absolute;
+  inset: 0 0 0 var(--main-column-width);
+  display: grid;
+  // display: none;
+  grid-template-columns: repeat(3, 1fr);
+  gap: var(--inner-padding);
+
+  padding-left: var(--inner-padding);
+
+  //không cấn giới hạn height do inset cũng là một cách để giới hạn
+  overflow-y: auto;
 }
