B61.16 - Làm nội dung phần Mega menu #3

--- a/templates/header.html
+++ b/templates/header.html
@@ -70,7 +70,7 @@
                                 </div>
                                 <div class="menu-column__content">
                                   <h2 class="menu-column__heading">
-                                    TV & Video
+                                    <a href="#!">TV & Video</a>
                                   </h2>
                                   <ul class="menu-column__list">
                                     <li class="menu-column__item">
@@ -127,7 +127,7 @@
                                 </div>
                                 <div class="menu-column__content">
                                   <h2 class="menu-column__heading">
-                                    Wearable Technology
+                                    <a href="#!">Wearable Technology</a>
                                   </h2>
                                   <ul class="menu-column__list">
                                     <li class="menu-column__item">
@@ -178,7 +178,7 @@
                                 </div>
                                 <div class="menu-column__content">
                                   <h2 class="menu-column__heading">
-                                    Computers
+                                    <a href="#!">Computers</a>
                                   </h2>
                                   <ul class="menu-column__list">
                                     <li class="menu-column__item">
@@ -263,7 +263,9 @@
                                   />
                                 </div>
                                 <div class="menu-column__content">
-                                  <h2 class="menu-column__heading">Savings</h2>
+                                  <h2 class="menu-column__heading">
+                                    <a href="#!">Savings</a>
+                                  </h2>
                                   <ul class="menu-column__list">
                                     <li class="menu-column__item">
                                       <a href="#!" class="menu-column__link">
@@ -299,7 +301,7 @@
                                 </div>
                                 <div class="menu-column__content">
                                   <h2 class="menu-column__heading">
-                                    Cell Phones
+                                    <a href="#!">Cell Phones</a>
                                   </h2>
                                   <ul class="menu-column__list">
                                     <li class="menu-column__item">
