--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1402,6 +1402,7 @@ html.dark {
 .dropdown {
   position: absolute;
   left: 0;
+  display: none;
   width: min(1240px, 100%);
   padding-top: 54px;
 }
@@ -1438,7 +1439,7 @@ html.dark {
   gap: 14px;
 }
 .menu-column + .menu-column {
-  margin-top: var(--inner-padding);
+  margin-top: 22px;
 }
 .menu-column__icon {
   position: relative;
@@ -1446,13 +1447,18 @@ html.dark {
   width: 36px;
   height: 36px;
 }
+@media (max-width: 1199.98px) {
+  .menu-column__icon {
+    display: none;
+  }
+}
 .menu-column__content {
   flex: 1;
 }
 .menu-column__icon-1 {
   width: 30px;
   height: 30px;
-  object-fit: cover;
+  object-fit: contain;
 }
 .menu-column__icon-2 {
   position: absolute;
@@ -1460,7 +1466,7 @@ html.dark {
   bottom: 0;
   width: 24px;
   height: 24px;
-  object-fit: cover;
+  object-fit: contain;
   filter: var(--menu-column-icon-color);
 }
 .menu-column__heading {
@@ -1489,7 +1495,7 @@ html.dark {
 .sub-menu {
   position: absolute;
   inset: 0 0 0 var(--main-column-width);
-  display: grid;
+  display: none;
   grid-template-columns: repeat(3, 1fr);
   gap: var(--inner-padding);
   padding-left: var(--inner-padding);
