--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -1,8 +1,10 @@
+@use "../abstracts";
+
 .dropdown {
   position: absolute;
   left: 0;
 
-  // display: none;
+  display: none;
   width: min(1240px, 100%);
   padding-top: 54px;
 
@@ -51,7 +53,7 @@
   gap: 14px;
 
   + .menu-column {
-    margin-top: var(--inner-padding);
+    margin-top: 22px;
   }
 
   &__icon {
@@ -59,6 +61,10 @@
     flex-shrink: 0;
     width: 36px;
     height: 36px;
+
+    @include abstracts.breakpoint(xl) {
+      display: none;
+    }
   }
 
   &__content {
@@ -68,7 +74,7 @@
   &__icon-1 {
     width: 30px;
     height: 30px;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   &__icon-2 {
@@ -77,7 +83,7 @@
     bottom: 0;
     width: 24px;
     height: 24px;
-    object-fit: cover;
+    object-fit: contain;
     filter: var(--menu-column-icon-color);
   }
 
@@ -114,8 +120,7 @@
 .sub-menu {
   position: absolute;
   inset: 0 0 0 var(--main-column-width);
-  display: grid;
-  // display: none;
+  display: none;
   grid-template-columns: repeat(3, 1fr);
   gap: var(--inner-padding);
 
