--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="top-bar">
     <!-- More -->
-    <button class="top-bar__more">
+    <button class="top-bar__more js-toggle" toggle-target="#navbar">
       <img src="./assets/icons/more.svg" alt="" class="top-bar__more-icon icon" />
     </button>
     <!-- logo -->
@@ -11,7 +11,11 @@
     </a>
 
     <!-- Navbar -->
-    <nav class="navbar">
+    <nav id="navbar" class="navbar hide">
+      <button class="navbar__close-btn js-toggle" toggle-target="#navbar">
+        <img src="./assets/icons/arrow-left.svg" alt="" />
+      </button>
+
       <ul class="navbar__list js-dropdown-list">
         <li class="navbar__item">
           <a href="#!" class="navbar__link">
@@ -1058,6 +1062,7 @@
         </li>
       </ul>
     </nav>
+    <div class="navbar__overlay js-toggle" toggle-target="#navbar"></div>
 
     <!-- Actions -->
     <div class="top-act">
