--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -8,6 +8,12 @@
   width: min(1240px, 100%);
   padding-top: 54px;
 
+  @include abstracts.breakpoint(lg) {
+    display: block;
+    position: initial;
+    padding-top: 0;
+  }
+
   &__inner {
     --inner-padding: 30px;
 
@@ -27,6 +33,18 @@
       translate: -50%;
       filter: var(--dropdown-arrow-color);
     }
+
+    @include abstracts.breakpoint(lg) {
+      padding: 0 40px;
+
+      border-radius: 0;
+      background: transparent;
+      box-shadow: none;
+
+      &::before {
+        content: none;
+      }
+    }
   }
 }
 
@@ -44,6 +62,12 @@
     height: var(--max-inner-height); // để nội dung không chòi ra ngoài
     border-right: 1px solid var(--top-menu-border-color);
     overflow-y: auto;
+
+    @include abstracts.breakpoint(lg) {
+      width: 100%;
+      height: auto;
+      border-right: none;
+    }
   }
 }
 
@@ -55,6 +79,10 @@
     margin-top: 22px;
   }
 
+  @include abstracts.breakpoint(lg) {
+    margin-top: 10px;
+  }
+
   &__icon {
     position: relative;
     flex-shrink: 0;
@@ -63,6 +91,10 @@
 
     @include abstracts.breakpoint(xl) {
       display: none;
+    }
+
+    @include abstracts.breakpoint(lg) {
+      display: block;
     }
   }
 
@@ -91,10 +123,18 @@
     font-size: 1.6rem;
     font-weight: 500;
     line-height: 150%;
+
+    @include abstracts.breakpoint(lg) {
+      margin-bottom: 26px;
+    }
   }
 
   &__list {
     margin-top: 19px;
+
+    @include abstracts.breakpoint(lg) {
+      margin-top: 0;
+    }
   }
 
   &__item {
@@ -128,6 +168,12 @@
 
   //không cấn giới hạn height do inset cũng là một cách để giới hạn
   overflow-y: auto;
+
+  @include abstracts.breakpoint(lg) {
+    position: initial;
+    grid-template-columns: 1fr;
+    padding-left: 0;
+  }
 
   &--not-main {
     position: initial;
