--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1776,4 +1776,61 @@ html.dark {
   }
 }
 
+.slideshow {
+  position: relative;
+  margin: 40px 0;
+}
+.slideshow__inner {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+.slideshow__item {
+  flex-shrink: 0;
+  width: 100%;
+}
+.slideshow__img {
+  width: 100%;
+}
+.slideshow__page {
+  --color: #fff;
+  position: absolute;
+  bottom: 70px;
+  left: 70px;
+  display: flex;
+  align-items: center;
+  column-gap: 24px;
+}
+.slideshow__num {
+  font-size: 1.8rem;
+  font-weight: 500;
+  line-height: 144.444%;
+  color: var(--color);
+}
+.slideshow__slider {
+  position: relative;
+  width: 172px;
+  height: 4px;
+  flex-shrink: 0;
+  background: var(--color);
+}
+.slideshow__slider::before, .slideshow__slider::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+  border: 4px solid var(--color);
+  border-radius: 50%;
+}
+.slideshow__slider::before {
+  translate: -90% -50%;
+  left: 0;
+}
+.slideshow__slider::after {
+  translate: 90% -50%;
+  right: 0;
+}
+
 /*# sourceMappingURL=main.css.map */
