--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -8,7 +8,7 @@
   width: min(1240px, 100%);
   padding-top: 54px;
 
-  @include abstracts.breakpoint(lg) {
+  @include abstracts.screen(lg) {
     position: initial;
     padding-top: 0;
   }
@@ -33,7 +33,7 @@
       filter: var(--dropdown-arrow-color);
     }
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       padding: 0 40px;
 
       border-radius: 0;
@@ -45,7 +45,7 @@
       }
     }
 
-    @include abstracts.breakpoint(sm) {
+    @include abstracts.screen(sm) {
       padding: 0 20px;
     }
   }
@@ -66,7 +66,7 @@
     border-right: 1px solid var(--top-menu-border-color);
     overflow-y: auto;
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       width: 100%;
       height: auto;
       border-right: none;
@@ -82,7 +82,7 @@
     margin-top: 22px;
   }
 
-  @include abstracts.breakpoint(lg) {
+  @include abstracts.screen(lg) {
     margin-top: 10px;
   }
 
@@ -92,11 +92,11 @@
     width: 36px;
     height: 36px;
 
-    @include abstracts.breakpoint(xl) {
+    @include abstracts.screen(xl) {
       display: none;
     }
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       display: block;
     }
   }
@@ -127,7 +127,7 @@
     font-weight: 500;
     line-height: 150%;
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       margin-bottom: 26px;
     }
   }
@@ -135,7 +135,7 @@
   &__list {
     margin-top: 19px;
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       margin-top: 0;
     }
   }
@@ -172,7 +172,7 @@
   //không cấn giới hạn height do inset cũng là một cách để giới hạn
   overflow-y: auto;
 
-  @include abstracts.breakpoint(lg) {
+  @include abstracts.screen(lg) {
     position: initial;
     grid-template-columns: 1fr;
     padding-left: 0;
@@ -186,7 +186,7 @@
     height: var(--max-inner-height);
     padding-left: 0;
 
-    @include abstracts.breakpoint(lg) {
+    @include abstracts.screen(lg) {
       grid-template-columns: 1fr;
       height: auto;
     }
