--- a/scss/components/_slideshow.scss
+++ b/scss/components/_slideshow.scss
@@ -4,7 +4,7 @@
   position: relative;
   margin: 40px 0;
 
-  @include abstracts.breakpoint(md) {
+  @include abstracts.screen(md) {
     margin: 30px 0;
   }
 
@@ -20,7 +20,7 @@
     width: 100%;
     padding-top: 34%;
 
-    @include abstracts.breakpoint(md) {
+    @include abstracts.screen(md) {
       padding-top: 50%;
     }
   }
@@ -54,7 +54,7 @@
     line-height: 144.444%;
     color: var(--color);
 
-    @include abstracts.breakpoint(md) {
+    @include abstracts.screen(md) {
       font-size: 1.4rem;
       line-height: 142.857%;
     }
@@ -79,7 +79,7 @@
       border: 4px solid var(--color);
       border-radius: 50%;
 
-      @include abstracts.breakpoint(md) {
+      @include abstracts.screen(md) {
         border-width: 3px;
       }
     }
