B61.39 - Làm form filter sản phẩm #6

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2103,26 +2103,22 @@ html.dark {
 
 .filter {
   position: absolute;
-  top: 55px;
   right: 0;
-  padding: 30px;
+  top: 55px;
+  padding: 30px 0;
   border-radius: 20px;
   background: var(--filter-form-bg);
   filter: drop-shadow(0px 40px 90px var(--filter-form-shadow));
   transition: opacity, visibility;
   transition-duration: 0.2s;
 }
-@media (max-width: 1199.98px) {
-  .filter {
-    height: calc(100vh - 80px);
-    padding-bottom: 0;
-    overflow-y: auto;
-    overscroll-behavior: contain;
-  }
-}
 @media (max-width: 575.98px) {
   .filter {
-    width: 85vw;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    inset: 0;
+    border-radius: 0;
   }
 }
 .filter.hide {
@@ -2159,7 +2155,8 @@ html.dark {
   margin-top: 20px;
 }
 .filter__form-group--inline {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 30px;
 }
 .filter__form-slider {
@@ -2175,8 +2172,8 @@ html.dark {
   translate: 0 -50%;
   width: 22px;
   height: 22px;
-  border: 6px solid #ffb700;
   border-radius: 50%;
+  border: 6px solid #ffb700;
   background: var(--filter-form-bg);
 }
 .filter__form-slider::before {
@@ -2202,6 +2199,11 @@ html.dark {
   height: 36px;
   padding: 0 12px;
 }
+@media (max-width: 1199.98px) {
+  .filter__form-text-input--small {
+    width: 100%;
+  }
+}
 @media (max-width: 575.98px) {
   .filter__form-text-input {
     width: 100%;
@@ -2220,6 +2222,11 @@ html.dark {
   color: #9e9da8;
   font-weight: 400;
 }
+@media (max-width: 575.98px) {
+  .filter__form-input {
+    font-size: 1.6rem;
+  }
+}
 .filter__form-input-icon {
   margin-left: 12px;
 }
@@ -2232,22 +2239,31 @@ html.dark {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 14px;
   min-width: var(--width, 108px);
   height: calc(100% - 10px);
-  padding: 0 14px;
   font-size: 1.4rem;
   font-weight: 500;
   line-height: 142.857%;
   cursor: pointer;
+}
+@media (max-width: 1199.98px) {
+  .filter__form-select {
+    flex: 1;
+  }
 }
 .filter__form-select + .filter__form-select {
   border-left: 1px solid #d2d1d6;
 }
 .filter__form-tags {
   display: flex;
-  align-items: center;
   flex-wrap: wrap;
   gap: 10px 20px;
+}
+@media (max-width: 575.98px) {
+  .filter__form-tags {
+    gap: 10px;
+  }
 }
 .filter__form-tag {
   padding: 6px 12px;
@@ -2257,7 +2273,7 @@ html.dark {
   font-size: 1.4rem;
   font-weight: 500;
   line-height: 142.857%;
-  transition: color, 0.2s;
+  transition: color 0.2s;
 }
 .filter__form-tag:hover {
   color: var(--text-color);
@@ -2282,11 +2298,10 @@ html.dark {
   justify-content: flex-end;
   margin-top: 32px;
 }
-@media (max-width: 1199.98px) {
+@media (max-width: 575.98px) {
   .filter__footer {
     position: sticky;
-    bottom: 0;
-    padding-bottom: 30px;
+    bottom: 30px;
     background: var(--filter-form-bg);
   }
 }
@@ -2297,6 +2312,7 @@ html.dark {
 @media (max-width: 575.98px) {
   .filter__cancel, .filter__submit {
     flex: 1;
+    height: 42px;
   }
 }
 .filter__cancel {
@@ -2305,9 +2321,23 @@ html.dark {
 .filter__submit {
   font-size: 1.4rem;
 }
+.filter__heading, .filter__content, .filter__footer {
+  padding: 0 30px;
+}
+.filter__content {
+  max-height: calc(100vh - 350px);
+  overflow-y: auto;
+  overscroll-behavior: contain;
+}
 @media (max-width: 1199.98px) {
   .filter__content {
     flex-direction: column;
+  }
+}
+@media (max-width: 575.98px) {
+  .filter__content {
+    max-height: calc(100vh - 230px);
+    padding-bottom: 60px;
   }
 }
 
