--- a/scss/components/_filter-form.scss
+++ b/scss/components/_filter-form.scss
@@ -7,10 +7,10 @@
 
 .filter {
   position: absolute;
-  top: 55px;
   right: 0;
+  top: 55px;
 
-  padding: 30px;
+  padding: 30px 0;
   border-radius: 20px;
 
   background: var(--filter-form-bg);
@@ -18,15 +18,12 @@
   transition: opacity, visibility;
   transition-duration: 0.2s;
 
-  @include abstracts.screen(xl) {
-    height: calc(100vh - 80px);
-    padding-bottom: 0;
-    overflow-y: auto;
-    overscroll-behavior: contain;
-  }
-
   @include abstracts.screen(sm) {
-    width: 85vw;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    inset: 0;
+    border-radius: 0;
   }
 
   &.hide {
@@ -68,14 +65,15 @@
       margin-top: 20px;
 
       &--inline {
-        display: flex;
-        // align-items: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         gap: 30px;
       }
     }
 
     &-slider {
       position: relative;
+
       width: 100%;
       height: 2px;
       background: #d2d1d6;
@@ -89,8 +87,9 @@
 
         width: 22px;
         height: 22px;
-        border: 6px solid #ffb700;
         border-radius: 50%;
+        border: 6px solid #ffb700;
+
         background: var(--filter-form-bg);
       }
 
@@ -123,6 +122,10 @@
         width: 121px;
         height: 36px;
         padding: 0 12px;
+
+        @include abstracts.screen(xl) {
+          width: 100%;
+        }
       }
 
       @include abstracts.screen(sm) {
@@ -145,6 +148,10 @@
         color: #9e9da8;
         font-weight: 400;
       }
+
+      @include abstracts.screen(sm) {
+        font-size: 1.6rem;
+      }
     }
 
     &-input-icon {
@@ -162,15 +169,19 @@
       align-items: center;
       justify-content: space-between;
 
+      padding: 0 14px;
       min-width: var(--width, 108px);
       height: calc(100% - 10px);
-      padding: 0 14px;
 
       font-size: 1.4rem;
       font-weight: 500;
       line-height: 142.857%;
 
       cursor: pointer;
+
+      @include abstracts.screen(xl) {
+        flex: 1;
+      }
     }
 
     &-select + &-select {
@@ -179,14 +190,18 @@
 
     &-tags {
       display: flex;
-      align-items: center;
       flex-wrap: wrap;
       gap: 10px 20px;
+
+      @include abstracts.screen(sm) {
+        gap: 10px;
+      }
     }
 
     &-tag {
       padding: 6px 12px;
       border-radius: 6px;
+
       color: #9e9da8;
       background: var(--filter-form-tag-bg);
 
@@ -194,7 +209,7 @@
       font-weight: 500;
       line-height: 142.857%;
 
-      transition: color, 0.2s;
+      transition: color 0.2s;
 
       &:hover {
         color: var(--text-color);
@@ -224,10 +239,9 @@
     justify-content: flex-end;
     margin-top: 32px;
 
-    @include abstracts.screen(xl) {
+    @include abstracts.screen(sm) {
       position: sticky;
-      bottom: 0;
-      padding-bottom: 30px;
+      bottom: 30px;
       background: var(--filter-form-bg);
     }
   }
@@ -239,6 +253,7 @@
 
     @include abstracts.screen(sm) {
       flex: 1;
+      height: 42px;
     }
   }
 
@@ -250,9 +265,24 @@
     font-size: 1.4rem;
   }
 
+  &__heading,
+  &__content,
+  &__footer {
+    padding: 0 30px;
+  }
+
   &__content {
+    max-height: calc(100vh - 350px);
+    overflow-y: auto;
+    overscroll-behavior: contain;
+
     @include abstracts.screen(xl) {
       flex-direction: column;
+    }
+
+    @include abstracts.screen(sm) {
+      max-height: calc(100vh - 230px);
+      padding-bottom: 60px;
     }
   }
 }
