B61.41 - Tối ưu phần Footer và Filter form

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -88,7 +88,7 @@
         </li>
         <li>
           <p class="footer__label">Address</p>
-          <p class="footer__text">12/20C, tổ 13, Vũng Tàu</p>
+          <p class="footer__text">12/20C, to 13, Vung Tau City</p>
         </li>
         <li>
           <p class="footer__label">Hours</p>
