--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -47,6 +47,9 @@
 .btn {
   display: flex;
   align-items: center;
+  justify-content: center;
+  gap: 10px;
+
   height: 46px;
   border-radius: 6px;
   padding: 0 20px;
@@ -59,7 +62,9 @@
   user-select: none;
 
   + .btn {
-    margin-left: 20px;
+    &:not(.btn--no-margin) {
+      margin-left: 20px;
+    }
   }
 
   &--text {
