--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -176,6 +176,12 @@
 
   @include abstracts.screen(md) {
     margin-left: 0;
+
+    &__sign-up {
+      height: 40px !important;
+      padding: 0 8px;
+      font-size: 1.5rem;
+    }
   }
 
   &__group {
