--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1352,6 +1352,7 @@ html {
   --filter-form-shadow: rgba(200, 200, 200, 0.4);
   --filter-form-tag-bg: #f8f8fb;
   --auth-content-bg: #fff;
+  --form-placeholder-color: #d2d1d6;
 }
 @media (max-width: 991.98px) {
   html {
@@ -1362,6 +1363,11 @@ html {
 @media (max-width: 767.98px) {
   html {
     --cate-item-bg: #fff;
+  }
+}
+@media (max-width: 767.98px) {
+  html {
+    --auth-intro-bg: #fff;
   }
 }
 
@@ -1395,7 +1401,12 @@ html.dark {
   --filter-form-bg: var(--dropdown-bg-color);
   --filter-form-shadow: rgba(0, 0, 0, 0.4);
   --filter-form-tag-bg: #171c28;
-  --filter-form-arrow: var(--dropdown-arrow-color) ;
+  --filter-form-arrow: var(--dropdown-arrow-color);
+  --auth-content-bg: #292e39;
+  --auth-intro-bg: #171c28;
+  --auth-intro-text-color: #b9babe;
+  --auth-heading-color: #b9babe;
+  --form-placeholder-color: #b9babe;
 }
 @media (max-width: 991.98px) {
   html.dark {
@@ -2545,6 +2556,11 @@ html.dark {
 .form__group {
   margin-top: 30px;
 }
+@media (max-width: 767.98px) {
+  .form__group {
+    margin-top: 20px;
+  }
+}
 .form__group--inline {
   display: flex;
   align-items: center;
@@ -2584,7 +2600,7 @@ html.dark {
   line-height: 144.444%;
 }
 .form__input::placeholder {
-  color: #d1d2d6;
+  color: var(--form-placeholder-color);
 }
 .form__input-icon {
   margin-left: 12px;
@@ -2705,6 +2721,7 @@ html.dark {
   align-items: center;
   justify-content: center;
   gap: 50px;
+  background: var(--auth-intro-bg);
 }
 .auth__intro-logo, .auth__intro-next {
   position: absolute;
@@ -2722,6 +2739,7 @@ html.dark {
 }
 .auth__intro-text {
   max-width: 412px;
+  color: var(--auth-intro-text-color);
   font-size: 1.8rem;
   font-weight: 500;
   line-height: 144.444%;
@@ -2756,20 +2774,27 @@ html.dark {
   margin: 0 auto;
   padding: 50px 0;
 }
+@media (max-width: 767.98px) {
+  .auth__content-inner {
+    padding: 32px 0;
+  }
+}
 .auth__heading {
   margin-top: 50px;
+  color: var(--auth-heading-color);
   font-size: 3rem;
   font-weight: 500;
   line-height: 146.667%;
 }
 @media (max-width: 767.98px) {
   .auth__heading {
+    margin-top: 40px;
     font-size: 2.2rem;
   }
 }
 .auth__desc {
   margin-top: 10px;
-  padding: 0 30px;
+  padding: 0 20px;
   color: #9e9da8;
   font-size: 1.5rem;
   font-weight: 500;
@@ -2806,6 +2831,12 @@ html.dark {
   gap: 30px;
   margin-top: 50px;
 }
+@media (max-width: 767.98px) {
+  .auth__btn-group {
+    gap: 20px;
+    margin-top: 40px;
+  }
+}
 .auth__btn {
   width: 100%;
 }
@@ -2819,6 +2850,7 @@ html.dark {
 }
 @media (max-width: 767.98px) {
   .auth__text {
+    margin-top: 40px;
     font-size: 1.6rem;
   }
 }
