--- a/scss/pages/_auth.scss
+++ b/scss/pages/_auth.scss
@@ -15,11 +15,13 @@
 
   &__intro {
     position: relative;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 50px;
+    background: var(--auth-intro-bg);
 
     &-logo,
     &-next {
@@ -42,6 +44,8 @@
 
     &-text {
       max-width: 412px;
+      color: var(--auth-intro-text-color);
+
       font-size: 1.8rem;
       font-weight: 500;
       line-height: 144.444%;
@@ -77,23 +81,29 @@
       width: min(460px, 100%);
       margin: 0 auto;
       padding: 50px 0;
+
+      @include abstracts.screen(md) {
+        padding: 32px 0;
+      }
     }
   }
 
   &__heading {
     margin-top: 50px;
+    color: var(--auth-heading-color);
     font-size: 3rem;
     font-weight: 500;
     line-height: 146.667%;
 
     @include abstracts.screen(md) {
+      margin-top: 40px;
       font-size: 2.2rem;
     }
   }
 
   &__desc {
     margin-top: 10px;
-    padding: 0 30px;
+    padding: 0 20px;
     color: #9e9da8;
     font-size: 1.5rem;
     font-weight: 500;
@@ -129,6 +139,11 @@
     flex-direction: column;
     gap: 30px;
     margin-top: 50px;
+
+    @include abstracts.screen(md) {
+      gap: 20px;
+      margin-top: 40px;
+    }
   }
 
   &__btn {
@@ -144,6 +159,7 @@
     line-height: 144.444%;
 
     @include abstracts.screen(md) {
+      margin-top: 40px;
       font-size: 1.6rem;
     }
 
