--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2665,7 +2665,20 @@ html.dark {
   border-color: transparent transparent #fff #fff;
   rotate: -45deg;
   left: 2px;
-  top: 5px;
+  top: 4px;
+}
+
+.message {
+  width: 100%;
+  padding: 14px;
+  border-radius: 8px;
+  font-size: 1.5rem;
+  font-weight: 500;
+  text-align: left;
+}
+.message--success {
+  border: 1px solid #46a05c;
+  background: rgba(39, 243, 117, 0.2);
 }
 
 .home__container {
@@ -2735,6 +2748,7 @@ html.dark {
   bottom: 50px;
 }
 .auth__intro-img {
+  width: var(--width);
   max-width: 100%;
 }
 .auth__intro-text {
@@ -2805,9 +2819,15 @@ html.dark {
     font-size: 1.4rem;
   }
 }
+.auth__message {
+  margin-top: 30px;
+}
 .auth__form {
   width: 100%;
   margin-top: 30px;
+}
+.auth__form-forgot {
+  margin-top: 10px;
 }
 @media (max-width: 767.98px) {
   .auth__form {
