--- a/scss/pages/_product-detail.scss
+++ b/scss/pages/_product-detail.scss
@@ -12,12 +12,21 @@
   margin-top: 30px;
 }
 
+.prod-info-content {
+  border-radius: 20px;
+  background: #fff;
+}
+
 .prod-preview {
   padding: 0 30px;
 
   @include abstracts.screen(lg) {
     display: flex;
     flex-direction: row-reverse;
+  }
+
+  @include abstracts.screen(md) {
+    padding: 16px;
   }
 
   &__list {
@@ -88,7 +97,7 @@
 
 .prod-info {
   padding: 60px;
-  background: #f6f6f6;
+  background: var(--product-detail-info-bg);
 
   @include abstracts.screen(xxl) {
     padding: 40px;
@@ -96,6 +105,12 @@
 
   @include abstracts.screen(lg) {
     margin-top: 30px;
+  }
+
+  @include abstracts.screen(md) {
+    margin-top: 0;
+    padding: 0 16px 16px;
+    border-radius: 20px;
   }
 
   &__heading {
@@ -168,12 +183,20 @@
   @include abstracts.screen(xxl) {
     padding-left: 10px;
   }
+
+  @include abstracts.screen(lg) {
+    padding-left: 0;
+  }
 }
 
 .prod-prop {
   display: flex;
   gap: 16px;
   margin-top: 30px;
+
+  @include abstracts.screen(md) {
+    margin-top: 20px;
+  }
 
   &__icon {
     align-self: flex-start;
