--- a/scss/pages/_product-detail.scss
+++ b/scss/pages/_product-detail.scss
@@ -10,11 +10,15 @@
 
 .product-container {
   margin-top: 30px;
+
+  @include abstracts.screen(md) {
+    margin-top: 20px;
+  }
 }
 
 .prod-info-content {
   border-radius: 20px;
-  background: #fff;
+  background: var(--product-detail-info-content-bg);
 }
 
 .prod-preview {
@@ -78,14 +82,14 @@
     object-fit: contain;
     border: 1px solid rgb(159, 158, 168, 0.3);
     border-radius: 8px;
-    cursor: pointer;
     opacity: 0.9;
     transition: opacity, border-color;
     transition-duration: 0.3s;
 
-    &:hover {
+    &:not(&--current):hover {
       opacity: 1;
       border-color: #9e9da8;
+      cursor: pointer;
     }
 
     &--current {
@@ -97,6 +101,7 @@
 
 .prod-info {
   padding: 60px;
+  border-radius: 10px;
   background: var(--product-detail-info-bg);
 
   @include abstracts.screen(xxl) {
@@ -124,7 +129,7 @@
   }
 
   &__tag {
-    background: #ededf6;
+    background: var(--product-detail-tag-bg);
   }
 
   &__card {
@@ -148,11 +153,13 @@
   &__tax {
     margin-left: 10px;
     padding: 2px 8px;
+    border-radius: 4px;
+
+    color: #67b044;
+    background: rgb(103 176 68 / 0.2);
     font-size: 1.4rem;
     font-weight: 500;
     line-height: 142.857%;
-    color: #67b044;
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 100%), #67b044;
   }
 
   &__total-price {
@@ -193,10 +200,6 @@
   display: flex;
   gap: 16px;
   margin-top: 30px;
-
-  @include abstracts.screen(md) {
-    margin-top: 20px;
-  }
 
   &__icon {
     align-self: flex-start;
