--- a/scss/components/_review-card.scss
+++ b/scss/components/_review-card.scss
@@ -1,4 +1,9 @@
+@use "../abstracts";
+
 .review-card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   padding: 30px;
   border-radius: 16px;
   background: var(--review-card-bg);
@@ -6,9 +11,23 @@
   &__content {
     display: flex;
     gap: 20px;
+    margin-bottom: 20px;
+
+    @include abstracts.screen(xl) {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    @include abstracts.screen(md) {
+      flex-direction: row;
+      align-items: initial;
+      text-align: initial;
+    }
   }
 
   &__avatar {
+    flex-shrink: 0;
     width: 80px;
     height: 80px;
     object-fit: cover;
@@ -31,13 +50,37 @@
     display: flex;
     align-items: center;
     gap: 8px;
-    margin-top: 20px;
+    margin-top: auto;
+
+    @include abstracts.screen(xl) {
+      flex-direction: column;
+    }
+
+    @include abstracts.screen(md) {
+      flex-direction: row;
+      margin-left: 20px;
+    }
 
     &-title {
       margin-left: 12px;
       font-size: 1.8rem;
       font-weight: 500;
       line-height: 144.444%;
+
+      @include abstracts.screen(xl) {
+        margin-left: 0;
+      }
+
+      @include abstracts.screen(lg) {
+        margin-left: 20px;
+      }
     }
   }
+
+  &__star-list {
+    display: flex;
+    gap: 8px;
+  }
 }
+
+// Tiếp 21:00
