--- a/templates/header-logined.html
+++ b/templates/header-logined.html
@@ -1091,13 +1091,16 @@
 
         <div class="top-act__separate"></div>
 
-        <button class="top-act__btn">
-          <img src="./assets/icons/buy.svg" alt="" class="top-action__icon icon" />
-          <span class="top-act__title">$65.42</span>
+        <div class="top-act__btn-wrap">
+          <button class="top-act__btn">
+            <img src="./assets/icons/buy.svg" alt="" class="top-action__icon icon" />
+            <span class="top-act__title">$65.42</span>
+          </button>
 
           <!-- Dropdown -->
           <div class="act-dropdown">
             <div class="act-dropdown__inner">
+              <img src="./assets/icons/arrow-up.png" alt="" class="act-dropdown__arrow" />
               <div class="act-dropdown__top">
                 <h2 class="act-dropdown__title">You have 3 item</h2>
                 <a href="#!" class="act-dropdown__view-all">See All</a>
@@ -1159,7 +1162,7 @@
               </div>
             </div>
           </div>
-        </button>
+        </div>
       </div>
 
       <div class="top-act__user">
